...
            descriptionTextViewSection()
        }
        .onChange(of: viewModel.isEventCreated) { isSuccess in
            eventCreated = isSuccess
        }
        .alert(Constants.AlertTitle.eventCreated, isPresented: $eventCreated) {
            closeButton()
        }
        .navigationTitle("Мероприятие")
        .toolbar { createEventButton() }
    }
}

...

    func createEventButton() -> some View {
        Button {
            focus = nil
            viewModel.createEventAction()
        } label: {
            Text("Сохранить")
        }
        .disabled(!viewModel.isCreateButtonActive)
    }

    func closeButton() -> some View {
        Button {
...
