...
    @FocusState private var focus: FocusableField?

    var body: some View {
        Form {
            Section {
                loginField()
                passwordField()
            }
            Section {
                loginButton()
                forgotPasswordButton()
            }
        }
        .navigationTitle("Вход по email")
        .navigationBarTitleDisplayMode(.inline)
    }
...
